# MLOPS_HSLU_project

./: .dockerignore  .gitignore  README.md  dashboard.html  pyproject.toml
lessons/sw_03/: web_service.py
project/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.worker  customer-churn-eda-multimodelensemble.ipynb  deploy.py  docker-compose.yml  flows.py  mlflow.db.bak  train.py  web_service.py
project/docs/: MONITORING.md  PREFECT.md  SCHEMAS.md  TRAIN.md  WEB_SERVICE.md
project/models/: best_params.json  feature_list.json
project/monitoring/: Dockerfile.monitor  init.sql  monitor.py  requirements.txt
project/monitoring/grafana/dashboards/: churn_monitoring.json
project/monitoring/grafana/provisioning/dashboards/: dashboards.yml
project/monitoring/grafana/provisioning/datasources/: postgres.yml
project/schemas/: schemas.py
